# SD_PM

./: LICENSE  README.md  platon.py  pyproject.toml
week 2/: week_2_practical_examples.py
week 3/: week_3_practice.ipynb
